# roar

./: .gitignore  README.md
base_station/config/: obstacle  rviz.rviz
base_station/leo_erc_common/leo_erc_description/: CMakeLists.txt
base_station/leo_erc_common/leo_erc_teleop/: package.xml
base_station/leo_erc_description/: package.xml
base_station/leo_erc_description/launch/: state_publisher.launch
base_station/leo_erc_description/models/: ERC2020payload_outline.dae  Probe.dae
base_station/leo_erc_description/urdf/: leo_erc.urdf.xacro
base_station/leo_erc_teleop/: CMakeLists.txt
base_station/roar_description/: CMakeLists.txt  package.xml
base_station/roar_description/config/: joint_names_roar_description.yaml  roar_controllers.yaml
base_station/roar_description/launch/: controllers.launch  display.launch  gazebo.launch  gazebo2.launch  roar_empty_world.launch  roar_marsyard.launch
base_station/roar_description/meshes/: Differential_Ball_Lower_LHS.STL  Differential_Ball_Lower_RHS.STL  Differential_Ball_Upper_LHS.STL  Differential_Ball_Upper_RHS.STL  Differential_Bar.STL  Differential_Rod_LHS.STL  Differential_Rod_RHS.STL  Wheel_LHS_Back.STL  Wheel_LHS_Front.STL  Wheel_LHS_Middle.STL  Wheel_RHS_Back.STL  Wheel_RHS_Front.STL  Wheel_RHS_Middle.STL
base_station/roar_description/urdf/: roar_control.urdf.xacro  roar_description.csv  roar_description.urdf
base_station/roar_description/worlds/: roar_marsyard.world  roar_trans
base_station/roar_full_sus_description/: CMakeLists.txt  package.xml
base_station/roar_full_sus_description/config/: joint_names_roar_description_updated.yaml
base_station/roar_full_sus_description/launch/: display.launch  gazebo.launch  roar_empty_world.launch
base_station/roar_full_sus_description/meshes/: differential.STL  differential_rod_lhs.STL  differential_rod_rhs.STL  wheel_lhs_front.STL  wheel_lhs_mid.STL  wheel_lhs_rear.STL  wheel_rhs_front.STL
base_station/roar_full_sus_description/urdf/: roar_description_updated.csv  roar_description_updated.urdf
base_station/roar_gazebo/: CMakeLists.txt  package.xml
base_station/roar_gazebo/config/: config.yaml  pid_gains.yaml  roar_controllers.yaml
base_station/roar_gazebo/launch/: roar_empty_world.launch  roar_empty_world_camera.launch  roar_gazebo.launch  roar_landmarks.launch  roar_marsyard.launch  spawn_controllers.launch  spawn_roar.launch  spawn_rover.launch  spawner.launch
base_station/roar_gazebo/script/: tf_broadcaster.py
base_station/roar_gazebo/worlds/: rover_map_original.world  rover_world.world
base_station/roar_half_sus_description/: CMakeLists.txt  package.xml
base_station/roar_half_sus_description/config/: joint_names_roar_half_sus_description.yaml  joint_names_roar_half_suspension_description.yaml  roar_controllers.yaml
base_station/roar_half_sus_description/launch/: display.launch  gazebo.launch  roar_controllers.launch  roar_empty_world.launch  roar_gazebo.launch  roar_marsyard.launch  spawn_rover.launch
base_station/roar_half_sus_description/meshes/: wheel_lhs_front.STL  wheel_lhs_mid.STL  wheel_lhs_rear.STL  wheel_rhs_front.STL  wheel_rhs_mid.STL  wheel_rhs_rear.STL
base_station/roar_half_sus_description/models/: world_camera
base_station/roar_half_sus_description/urdf/: roar_half_sus_description.csv  roar_half_sus_description.urdf
base_station/teleop/: CMakeLists.txt  package.xml
base_station/teleoperation/: CMakeLists.txt  package.xml
base_station/teleoperation/config/: ssh.sh
base_station/temp/roar_description/: CMakeLists.txt  package.xml
communication/: CMakeLists.txt  package.xml
dependencies/roar_msgs/: CMakeLists.txt  package.xml
dependencies/roar_msgs/msg/: Command.msg  Landmark.msg  LandmarkArray.msg  Mode.msg  ModeCommand.msg  ModuleStatus.msg  NodeStatus.msg  StateCommand.msg
gazebo_ros/cmake/: gazebo_rosConfig.cmake
localization/: CMakeLists.txt  package.xml  ukf.cpp
localization/landmark position/: landmarks.csv
localization/launch/: localization.launch
navigation/: CMakeLists.txt  controller.py  package.xml
navigation/scripts/: controller.py  controller_global.py  noise.py  path_test.py
perception/: CMakeLists.txt  package.xml
perception/perception/: CMakeLists.txt  package.xml
perception/perception/calibration/: front_cam(2).yaml  rear_cam(1).yaml
perception/perception/config/: perception.rviz
planning/: CMakeLists.txt  package.xml
planning/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
planning/launch/: mapping_planning.launch  move_base.launch
planning/maps/: map.pgm  map.yaml
planning/scripts/: Astar_planner.py  occupancy_grid.py  send_goals.py  test_Astar_planner.py  test_grid.py  test_send_goals.py  tf_broadcaster.py
roar_msgs/: CMakeLists.txt
ros_can/: CMakeLists.txt
ros_can/ros_can/: CMakeLists.txt  package.xml
ros_can/src/: roscan_converter.py
ros_can/test/: cansend.py
roscan/roscan/: CMakeLists.txt  package.xml
roscan/roscan/config/: can0.sh  helper.sh  vcan0.sh
roscan/roscan/launch/: roscan.launch
roscan/roscan/src/: cansend.py  roscan_converter.py
roscan/roscan/test/: vcan0.sh
supervisor/: CMakeLists.txt  package.xml  setup.py
supervisor/config/: manual_modules.json  modules.json
supervisor/launch/: autonomous_test.launch  manual_test.launch  roar.launch
supervisor/scripts/: autonomous_supervisor.py  roar_supervisor.py
supervisor/src/: auto_supervisor.py  autonomous_supervisor.py  module.py  roar_supervisor.py  supervisor_node.py
supervisor/src/supervisor/: __init__.py  module.py  module_handler.py  supervisor_exceptions.py
supervisor/src/supervisor_modules/: module.py  supervisor_error.py
supervisor/test/: autonomous.py  autoonomous_mode.sh  manual.py  manual_mode.sh  mode_sender.py  pub_autonomous_mode.sh  pub_manual_mode.sh
teleoperation/launch/: teleop.launch
teleoperation/src/: teleop.py
(+43 files in other folders)
