<package format="2">
  <name>leo_erc_description</name>
  <version>0.0.0</version>
  <description>
    URDF Description package for Leo Rover (ERC edition)
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/LeoRover/leo_erc_common/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_erc_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>leo_description</exec_depend>

  <test_depend>rostest</test_depend>

</package>
