<?xml version="1.0"?>
<package format="2">
  <name>leo_erc_teleop</name>
  <version>0.0.0</version>
  <description>
    Scripts and launch files for Leo Rover (ERC edition) teleoperation
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/LeoRover/leo_erc_common/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_erc_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

</package>
